get wallet amount added
